[package]
name = "bevy_maze"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
bevy_egui = "0.5"
maze_generator = { git = "https://github.com/slyedoc/maze_generator.git" }

#[profile.dev.package.'*']
#opt-level = 3